<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwirlyTap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_player">Single Player</string>
    <string name="single_player">Single Player</string>
    <string name="title_activity_play_again">Play Again</string>
    <string name="play_again">Play Again</string>
    <string name="score">Score</string>
    <string name="initial_Score">0</string>
    <string name="Pause_Button">Pause</string>
    <string name="num_sixty">60</string>
    <string name="time">TIME</string>
    <string name="time_sixty">Time: 60</string>
    <string name="temp_you_scored">0000 + 0000 = 0000</string>
    <string name="Score_Labels">Score + Combo = Final</string>
    <string name="action_home">Home</string>
    <string name="restart">Restart Game</string>
    <string name="share">Share</string>
    <string name="share_score">Share Score</string>
    <string name="High_Score">High Scores</string>
    <string name="congratulations">Congratulations!</string>
    <string name="title_activity_pause_menu">PauseMenu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_data_base">DataBaseActivity</string>
    <string name="title_activity_my_sql">mySQLActivity</string>
    <string name="Username">Name</string>
    <string name="Submit">Submit</string>
    <string name="Uname">Username</string>
    <string name="TimeUp">Time\'s up!</string>
    <string name="Countdown">3</string>
    <string name="LogIn">Log In</string>
    <string name="Register">New Button</string>
    <string name="Registration">New Button</string>
    <string name="Confirm">Register</string>
    <string name="UpdateUserInfo">Update</string>
    <string name="DeleteUserInfo">Delete User</string>
    <string name="lives">Lives:</string>
    <string name="Profile">Profile</string>
    <string name="TimeMode">Time Mode</string>
    <string name="LevelMode">Level Mode</string>
    <string name="TitleImage">Title: SwirlyTap</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="RESTART">RESTART</string>
    <string name="QUIT">QUIT</string>
    <string name="Paused">Paused</string>
    <string name="pass_word">Password</string>
    <string name="name_pass">Name</string>
    <string name="Pass_Word">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register_button">New Button</string>
    <string name="Register_pass">Register</string>
    <string name="enterUN">Enter Username</string>
    <string name="enterPass">Enter Password</string>
    <string name="username1">Enter Username</string>
    <string name="password1">Enter Password</string>
    <string name="clickbutton">New Button</string>
    <string name="loginbutton">Login</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="allUsers">New Button</string>
    <string name="users">All Users</string>
    <string name="users1">All Users</string>
    <string name="username2">Name</string>
    <string name="editpass2">Enter New Password</string>
    <string name="editnewuser2">Enter New Username</string>
    <string name="updateButton">sp</string>
    <string name="buttonsubmit">Submit</string>

    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="login1">Login</string>
    <string name="register1">Register</string>
    <string name="startgame">New Button</string>
    <string name="startgame1">Start Game</string>
    <string name="playGame">PLAY</string>
    <string name="play">PLAY</string>
    <string name="LoginMessage">Log in to place your name to your high scores and view other statistics!</string>
    <string name="confimpassword">Confirm New Password</string>
    <string name="Updatesubmit">New Button</string>
    <string name="submit1">SUBMIT</string>
    <string name="newus">Enter Username</string>
    <string name="newpa">Enter Password</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_play_again__level">PlayAgain_Level</string>
    <string name="highscoresTitle">High Scores</string>
    <string name="back">Back</string>
    <string name="NameHolder">Name Holder</string>
    <string name="space3">   </string>
    <string name="loginPrompt">Please enter your username and password to sign into SwirlyTap.</string>
    <string name="registerPrompt">Register by choosing a username and password.</string>
    <string name="updateTitle">Update your information.</string>
    <string name="usersTitle">Users:</string>
    <string name="spScreenshot">Screenshot</string>
    <string name="ProfileTitle">SwirlyTap Profile</string>
    <string name="UserName">UserName</string>
    <string name="UsernameDescription">User:  </string>
    <string name="z000">000</string>
    <string name="z0000">0000</string>
    <string name="z00000">00000</string>
    <string name="sz00000"> 00000</string>
    <string name="SignOut">Sign Out</string>
    <string name="Back">Back</string>
    <string name="MyProfile">My Profile</string>

</resources>
