<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:background="@drawable/profile_bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Profile Login"
            android:id="@+id/LoginTitle"
            android:layout_alignParentStart="true"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#ff000000"
            android:background="#85ababab" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView4"
            android:layout_below="@+id/LoginTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TitleRowLogin"
                    android:layout_alignParentStart="true"
                    android:background="#ff242424">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/loginPrompt"
                        android:gravity="center|top"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/TitleLogin"
                        android:textColor="#ffdbdbdb"
                        android:textSize="25sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"/>

                </TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/username1"
                    android:ems="10"
                    android:id="@+id/editUsername1"
                    android:layout_gravity="right"
                    android:textSize="30sp"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_below="@+id/TitleRowLogin" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password1"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:textSize="30sp"
                    android:layout_below="@+id/editUsername1" />

                <Button
                    android:layout_width="195sp"
                    android:layout_height="60sp"
                    android:text="@string/LogIn"
                    android:id="@+id/login"
                    android:textSize="25sp"
                    android:background="@drawable/button_bg"
                    android:textColor="#ffffffff"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/editText2"
                    android:layout_marginTop="10sp" />

                <Button
                    android:layout_width="195sp"
                    android:layout_height="60sp"
                    android:text="@string/Back"
                    android:id="@+id/Back"
                    android:background="@drawable/button_bg"
                    android:textColor="#ffffffff"
                    android:textSize="25sp"
                    android:layout_marginTop="10sp"
                    android:layout_below="@+id/login"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</LinearLayout>