<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.spencer.swirlytap.PlayAgain"
    android:background="@drawable/game_end_bg"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.12">


                <TextView
                    android:text="@string/temp_you_scored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="35sp"
                    android:textColor="#ff4bb1cc"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/congratulations"
                    android:contentDescription="Congratulations!"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:text="@string/play_again"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:id="@+id/PlayAgain"
                    android:textSize="30sp"
                    android:textColor="#ff000000"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="315dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:text="@string/action_home"
                    android:layout_width="250sp"
                    android:layout_height="100sp"
                    android:id="@+id/returnHome"
                    android:textSize="30sp"
                    android:textColor="#ff010100"
                    android:background="@drawable/button_bg"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:text="@string/share"
                    android:layout_width="250sp"
                    android:layout_height="100sp"
                    android:id="@+id/Share"
                    android:textSize="30sp"
                    android:textColor="#ff010100"
                    android:background="@drawable/button_bg"
                    android:layout_centerVertical="true"
                    android:layout_alignLeft="@+id/returnHome"
                    android:layout_alignStart="@+id/returnHome"
                    android:enabled="false" />

                <Button
                    android:layout_width="250sp"
                    android:layout_height="100sp"
                    android:id="@+id/HighScore"
                    android:layout_below="@+id/HighScore"
                    android:layout_alignLeft="@+id/HighScore"
                    android:layout_alignStart="@+id/HighScore"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/Share"
                    android:layout_alignEnd="@+id/Share"
                    android:textSize="30sp"
                    android:textColor="#ff010100"
                    android:background="@drawable/button_bg"
                    android:layout_centerVertical="true"
                    android:text="@string/High_Score"
                    android:enabled="true"
                    android:focusableInTouchMode="true"
                    android:clickable="true" />

                <!--    <com.twitter.sdk.android.tweetui.TweetView
                    xmlns:twittersdk="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/photo_default_tweet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    twittersdk:tw__tweet_id="20"/> -->

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>