<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.dianaupham.swirlytap.SinglePlayer"
    android:orientation="vertical"
    android:background="@drawable/tw__transparent"
    android:clickable="true"
    android:id="@+id/pause_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Paused"
                    android:src="@drawable/paused"
                    android:contentDescription="@string/Paused"
                    android:scaleType="centerInside"
                    android:onClick="Continue"
                    android:background="#00ffffff"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="false"
                    android:layout_marginTop="80sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:backgroundTint="#8e000000"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="200sp"
                    android:layout_height="60sp"
                    android:text="@string/CONTINUE"
                    android:id="@+id/Continue"
                    android:background="@drawable/button_bg"
                    android:enabled="true"
                    android:onClick="Continue"
                    android:textSize="20sp"
                    android:typeface="normal"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_row="0"
                    android:layout_column="0" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="200sp"
                    android:layout_height="60sp"
                    android:text="@string/RESTART"
                    android:id="@+id/Restart"
                    android:background="@drawable/button_bg"
                    android:enabled="true"
                    android:onClick="Restart"
                    android:textSize="20sp"
                    android:typeface="normal"
                    android:nestedScrollingEnabled="false"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_row="1"
                    android:layout_column="0" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="200sp"
                    android:layout_height="60sp"
                    android:text="@string/QUIT"
                    android:id="@+id/Quit"
                    android:background="@drawable/button_bg"
                    android:enabled="true"
                    android:onClick="Quit"
                    android:textSize="20sp"
                    android:typeface="normal"
                    android:nestedScrollingEnabled="false"
                    android:textStyle="bold"
                    android:longClickable="true"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal" />

            </GridLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
